--- a/style.css
+++ b/style.css
@@ -4,15 +4,18 @@ body{
 .south_campus_img{
     display:flex; 
     position: relative;
+    margin: auto;
     justify-content: center;
     top: 50%;
     transform: translateY(-50%);
-    
+    min-width: 70vmin; 
+    max-width: 170vmin;
 }
 #main_img{
     max-width: 75%;
     position: relative;
     box-shadow: 0 0 8px 8px #d9d9d9 inset;
+    margin: 0 auto;
 }
 
 #top_building{
@@ -57,7 +60,21 @@ body{
     top: 48%;
     left:24%;
 }
-
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    font-size: 1.2vmax;
+    width: 100%
+}
+td, th {
+    border: 1px solid black;
+    text-align: left;
+    padding: 0.5px;
+    
+}
+tr:nth-child(even) {
+    background-color: #dddddd;
+}
 #popup1::after, #popup2::after{
     background-color: #F9975D;
     content: "\00a0";
@@ -82,7 +99,6 @@ body{
     left: 0%;
     position: absolute;
     top: 81%;
-   
 }
 #top_building:hover + #popup1{
     position: absolute;
