Buttons and Svg intro

--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body{
     top: 48%;
     left:24%;
 }
-table {
+table{
     font-family: arial, sans-serif;
     border-collapse: collapse;
     font-size: 1.2vmax;
@@ -116,4 +116,62 @@ tr:nth-child(even) {
     flex-direction: column;
     color:white;
 }
+#bef_but{
+    right:20%;
+    top:20%;
+    background-color: #C85C5C;
+}
+#aft_but{
+    right:15%;
+    top:35%;
+    background-color: #B2EA70;
+}
+#bef_but, #aft_but {
+    position: absolute;
+    align-items: center;
+    appearance: none;
+    border-radius: 4px;
+    border-width: 0;
+    box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
+    box-sizing: border-box;
+    color: black;
+    cursor: pointer;
+    display: inline-flex;
+    font-family: "JetBrains Mono",monospace;
+    height: 5.5vmax;
+    justify-content: center;
+    line-height: 1;
+    list-style: none;
+    overflow: hidden;
+    padding-left: 1vmax;
+    padding-right: 1vmax;
+    text-align: left;
+    text-decoration: none;
+    transition: box-shadow .15s,transform .15s;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    white-space: nowrap;
+    will-change: box-shadow,transform;
+    font-size: 2vmax;
+}
+#bef_but:focus, #aft_but:focus {
+    box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+}
+#bef_but:hover, #aft_but:hover {
+    box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+    transform: translateY(-2px);
+}
+
+button:active {
+    box-shadow: #D6D6E7 0 3px 7px inset;
+    transform: translateY(2px);
+}
+#circle1{
+    top: -4%;
+    left:7.8%;
+    position: absolute;
+    opacity: 80%;
+}
+
 /* Color pallette https://colorhunt.co/palette/c85c5cf9975dfbd148b2ea70 */
