--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 body{
     background-color: #d9d9d9;
+    width: 130%;
 }
 .south_campus_img{
+    left: calc(100vw/-6);
     display:flex; 
     position: relative;
     margin: auto;
