--- a/style.css
+++ b/style.css
@@ -64,10 +64,14 @@ body{
     z-index: 3;
 }
 table{
+    position: absolute;
     font-family: arial, sans-serif;
     border-collapse: collapse;
-    font-size: 1.2vmax;
-    width: 100%
+    font-size: 50%;
+    left: 10%;
+    height: 80%;
+    width: 80%;
+    z-index: 3;
 }
 td, th {
     border: 1px solid black;
