--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ body{
     z-index: 3;
 }
 table{
+    visibility: hidden;
     position: absolute;
     font-family: arial, sans-serif;
     border-collapse: collapse;
