--- a/style.css
+++ b/style.css
@@ -93,6 +93,7 @@ tr:nth-child(even) {
     top: 81%;
 }
 #bef_but{
+    color:white;
     height: 6.35%;
     width: 14.5%;
     left: 12.4%;
@@ -107,6 +108,7 @@ tr:nth-child(even) {
     background-color: #B2EA70;
 }
 #EUI_but{
+    color:white;
     height: 6.35%;
     width: 15%;
     left: 44%;
@@ -189,7 +191,6 @@ svg{
     z-index: 3;
     filter: invert(1);
 }
-
 
 
 /* Color pallettes
