--- a/style.css
+++ b/style.css
@@ -197,3 +197,4 @@ svg{
 https://colorhunt.co/palette/c85c5cf9975dfbd148b2ea70 
 https://www.color-hex.com/color-palette/6393 (Skip #b4e1fd)
 https://www.color-hex.com/color-palette/28118 (Skip #f6bd60)*/
+/* particle animation: https://loading.io/asset/593136 */
