--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ tr:nth-child(even) {
     top: 81%;
 }
 #bef_but{
-    color:white;
+    color:#B2EA70;
     height: 6.35%;
     width: 14.5%;
     left: 12.4%;
@@ -197,4 +197,4 @@ svg{
 https://colorhunt.co/palette/c85c5cf9975dfbd148b2ea70 
 https://www.color-hex.com/color-palette/6393 (Skip #b4e1fd)
 https://www.color-hex.com/color-palette/28118 (Skip #f6bd60)*/
-/* particle animation: https://loading.io/asset/593136 */
+/* particle animation https://loading.io/asset/593136 */
